--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 upstream loadbalancer {
     # Machines onto which nginx should balance the incomming load of requests
-    server address1-to-modify;
-    server address2-to-modify;
+    server project-v1-1:5000;
+    server project-v2-1:5000;
 }
 server {
     # Server configuration
