--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,9 @@ networks:
     internal: false
 
 services:
+
   v1:
+    image: europe-west4-docker.pkg.dev/spry-tree-453513-c0/voting-image/v1
     build: ./vote
     ports:
       - "5001:5000"
@@ -17,6 +19,7 @@ services:
       - back-tier
 
   v2:
+    image: europe-west4-docker.pkg.dev/spry-tree-453513-c0/voting-image/v2
     build: ./vote
     ports:
       - "5002:5000"
@@ -28,6 +31,7 @@ services:
       - back-tier
 
   nginx:
+    image: europe-west4-docker.pkg.dev/spry-tree-453513-c0/voting-image/nginx
     container_name: nginx
     build: ./nginx
     ports:
@@ -41,6 +45,7 @@ services:
 
   redis:
     image: redis:alpine
+    
     container_name: redis-server
     ports:
       - "6379:6379"
@@ -65,6 +70,7 @@ services:
       - "5432:5432"
 
   seed:
+    image: europe-west4-docker.pkg.dev/spry-tree-453513-c0/voting-image/seed
     build: ./seed-data
     networks:
       - front-tier
@@ -72,6 +78,7 @@ services:
       - nginx
 
   worker:
+    image: europe-west4-docker.pkg.dev/spry-tree-453513-c0/voting-image/worker
     build:
       context: ./worker
       args:
@@ -84,6 +91,7 @@ services:
     networks:
       - back-tier
   result:
+    image: europe-west4-docker.pkg.dev/spry-tree-453513-c0/voting-image/result
     build: ./result
     depends_on:
       - db
